fixed some text errors in bibliography

--- a/survey.bib
+++ b/survey.bib
@@ -1,6 +1,6 @@
 
 @inproceedings{carbunar_you_2012,
-	title = {You unlocked the Mt. Everest badge on foursquare \#x0021; Countering location fraud in Geosocial Networks},
+	title = {You unlocked the Mt. Everest badge on foursquare! Countering location fraud in Geosocial Networks},
 	doi = {10.1109/MASS.2012.6502516},
 	abstract = {{GeoSocial} Networks ({GSNs}) are online social networks centered on the location information of their users. Users “check-in” their location and use it to acquire location-based special status (e.g., badges, mayorships) and receive venue dependent rewards. The strategy of rewarding user participation however makes cheating a profitable behavior. In this paper we introduce {XACT}, a suite of venue-oriented secure location verification mechanisms that enable venues and {GSN} providers to certify the locations claimed by users. We prove that {XACT} is correct, secure and easy to use. We validate the need for secure location verification mechanisms by collecting and analyzing data from the most popular {GSNs} today: 780,000 Foursquare users and 143,000 Gowalla users. Through a proof-of-concept implementation on a Revision C4 {BeagleBoard} embedded system we show that {XACT} is easy to deploy and economically viable. We analytically and empirically prove that {XACT} detects location cheating attacks.},
 	booktitle = {2012 {IEEE} 9th International Conference on Mobile Adhoc and Sensor Systems ({MASS})},
@@ -12,7 +12,7 @@
 }
 
 @article{carbunar_:_2014,
-	title = {: Toward Preserving Privacy and Functionality in Geosocial Networks},
+	title = {PROFILr: Toward Preserving Privacy and Functionality in Geosocial Networks},
 	volume = {9},
 	issn = {1556-6013},
 	doi = {10.1109/TIFS.2014.2307697},
@@ -354,13 +354,4 @@
 	month = sep,
 	year = {2011},
 	pages = {37--48}
-}
-
-@misc{zickuhr_location-based_????,
-	title = {Location-Based Services},
-	url = {http://www.pewinternet.org/2013/09/12/location-based-services/},
-	abstract = {More social media users are adding location information to their posts, and most smartphone owners use location-based information services.},
-	urldate = {2014-12-12TZ},
-	journal = {Pew Research Center's Internet \& American Life Project},
-	author = {Zickuhr, Kathryn}
 }
