removed unrelated paper Friendship and something or other

--- a/survey.tex
+++ b/survey.tex
@@ -10,7 +10,7 @@
 
 \section{Abstract}
 
-Beep \cite{carbunar_you_2012}\cite{carbunar_:_2014}\cite{carbunar_shy_2012}\cite{yoon_social_2012}\cite{carbunar_private_2014}\cite{mascetti_privacy_2011}\cite{puttaswamy_preserving_2014}\cite{cheng_personalized_2011}\cite{bao_partner-marketing_2014}\cite{li_nearby_2013}\cite{zheng_mining_2012}\cite{ruiz_vicente_location-related_2011}\cite{bao_location-based_2012}\cite{levandoski_lars:_2012}\cite{karamshuk_geo-spotting:_2013}\cite{wang_face--face_2012}\cite{cho_friendship_2011}\cite{scellato_exploiting_2011}\cite{ye_exploiting_2011}\cite{chen_discovering_2011}\cite{wei_constructing_2012}\cite{lin_moving-object_2011}.
+Beep \cite{carbunar_you_2012}\cite{carbunar_:_2014}\cite{carbunar_shy_2012}\cite{yoon_social_2012}\cite{carbunar_private_2014}\cite{mascetti_privacy_2011}\cite{puttaswamy_preserving_2014}\cite{cheng_personalized_2011}\cite{bao_partner-marketing_2014}\cite{li_nearby_2013}\cite{zheng_mining_2012}\cite{ruiz_vicente_location-related_2011}\cite{bao_location-based_2012}\cite{levandoski_lars:_2012}\cite{karamshuk_geo-spotting:_2013}\cite{wang_face--face_2012}\cite{scellato_exploiting_2011}\cite{ye_exploiting_2011}\cite{chen_discovering_2011}\cite{wei_constructing_2012}\cite{lin_moving-object_2011}.
 
 \bibliography{survey}{}
 \bibliographystyle{plain}
